[gd_scene load_steps=11 format=3 uid="uid://2y1bj1iekc0n"]

[ext_resource type="Script" uid="uid://chd2s6optarub" path="res://levels/objects/boat/boat.gd" id="1_hlncd"]
[ext_resource type="Texture2D" uid="uid://bnyyso8r3xy7h" path="res://assets/island/boat/boat_sail_1.png" id="1_ndtfy"]
[ext_resource type="Texture2D" uid="uid://vtdtt6qgcrpm" path="res://assets/island/boat/boat_sail_2.png" id="2_2l30g"]
[ext_resource type="Texture2D" uid="uid://y8tmjcm0d6ki" path="res://assets/island/boat/boat_sail_3.png" id="3_hlncd"]
[ext_resource type="Texture2D" uid="uid://bv2po7d5rema6" path="res://assets/island/boat/boat_sail_4.png" id="4_kc5hd"]
[ext_resource type="Texture2D" uid="uid://cbrqqsfiyiei0" path="res://assets/island/boat/boat_sail_5.png" id="5_5ayfn"]
[ext_resource type="Texture2D" uid="uid://crflavbexmqg2" path="res://assets/island/boat/boat_body.png" id="6_fotra"]
[ext_resource type="Script" uid="uid://nvuabioddqmj" path="res://scripts/core/interactive_area_2d.gd" id="8_kc5hd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ayfn"]
size = Vector2(84, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_fotra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ndtfy")
}, {
"duration": 1.0,
"texture": ExtResource("2_2l30g")
}, {
"duration": 1.0,
"texture": ExtResource("3_hlncd")
}, {
"duration": 1.0,
"texture": ExtResource("4_kc5hd")
}, {
"duration": 1.0,
"texture": ExtResource("5_5ayfn")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="AnimatableBody2D" type="AnimatableBody2D"]
script = ExtResource("1_hlncd")
start_direction = "Left"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 17)
texture = ExtResource("6_fotra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 17)
shape = SubResource("RectangleShape2D_5ayfn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-14, -19)
sprite_frames = SubResource("SpriteFrames_fotra")

[node name="InteractiveArea2D" type="Area2D" parent="."]
script = ExtResource("8_kc5hd")
metadata/_custom_type_script = "uid://nvuabioddqmj"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(-1, 17)
shape = SubResource("RectangleShape2D_5ayfn")

[node name="FrontRayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 17)
target_position = Vector2(50, 0)

[connection signal="interacted" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_interacted"]
